@@ -15,6 +15,8 @@ Release ...
 * tbl: The static limits on the number of table lines, columns, and heading
   lines have been removed. In effect, all lines of a table are considered
   when the column widths are computed, and ".T&" can occur at any line.
+* tbl: The "nokeep" option causes tbl not to write a ".ne" command for a
+  boxed table.
 * troff: The CW, CI, CB, and CX fonts no longer substitute the "fi" and "fl"
   ligatures with the "devps" device. This is consistent with "devpost".
 * [nt]roff: If a word starts with a motion followed by a hyphenation
